<?php

namespace Modules\Parcels\Application\Contracts;

use Modules\Core\Application\Contracts\IBaseService;

interface IParcelsService extends IBaseService
{
    // Métodos específicos de parcelas si los necesitas
}
